# DBManagementLab

./: CMakeLists.txt  adddialog.cpp  adddialog.h  adddialog.ui  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifydialog.cpp  modifydialog.h  modifydialog.ui  printdialog.cpp  printdialog.h  printdialog.ui  printgraf.cpp  printgraf.h  printgraf.ui
sql/: sample_db_query.sql
